Fix seek button alignment

--- a/liwords-ui/src/gameroom/scss/gameroom.scss
+++ b/liwords-ui/src/gameroom/scss/gameroom.scss
@@ -6,7 +6,7 @@
   align-items: flex-end;
   justify-content: flex-end;
   .ant-btn {
-    margin-left: 16px;
+    margin: 0 0 0 12px;
   }
 }
 
